--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     
 
     <div id="content">
-      <div class="parent-column">
+      <div id="parent-column">
         <nav id="nav-column">
           <div id="nav-column-mobile" class="list fixed">
             <div id="mobile-1" class="mobile">
