switching more css to BEM

--- a/index.html
+++ b/index.html
@@ -68,20 +68,20 @@
     <div id="content">
       <div id="parent-column">
         <nav id="nav-column">
-          <div id="nav-column-mobile" class="list fixed">
+          <div id="nav-column-mobile" class="list navbar">
             <div id="mobile-1" class="mobile">
               <div class="nav-container">
-                <a id="nav-contact" href="#about"><p class="nav-buttons">About</p></a>
+                <a id="nav-contact" href="#about"><p class="navbar__button">About</p></a>
               </div>
             </div>
             <div id="mobile-2" class="mobile">
               <div class="nav-container">
-                <a href="#projects"><p class="nav-buttons">Projects</p></a>
+                <a href="#projects"><p class="navbar__button">Projects</p></a>
               </div>
             </div>
             <div id="mobile-3" class="mobile">
               <div class="nav-container">
-                <a href="#contact"><p class="nav-buttons">Contact</p></a>
+                <a href="#contact"><p class="navbar__button">Contact</p></a>
               </div>
             </div>
           </div>
