--- a/index.html
+++ b/index.html
@@ -67,27 +67,27 @@
         <nav id="nav-column">
           <div id="nav-column-mobile" class="list navbar">
             <div id="mobile-1" class="mobile">
-              <div class="nav-container">
+              <div class="navbar__container">
                 <a id="nav-contact" href="#about" class="navbar__anchor"><p class="navbar__button">About</p></a>
               </div>
             </div>
             <div id="mobile-2" class="mobile">
-              <div class="nav-container">
+              <div class="navbar__container">
                 <a href="#projects" class="navbar__anchor"><p class="navbar__button">Projects</p></a>
               </div>
             </div>
             <div id="mobile-3" class="mobile">
-              <div class="nav-container">
+              <div class="navbar__container">
                 <a href="#contact" class="navbar__anchor"><p class="navbar__button">Contact</p></a>
               </div>
             </div>
           </div>
         </nav>
         <div id="content-column" class="content">
-          <div id="about" class="content__about">
-            <p class="content--font22">I’m a motivated and dedicated front-end web developer who loves having a nice balance of problem solving, logical thinking and creativity in my work. After being introduced to the world of coding by close friends, I realised the potential it offered for me to be creative and build programs that would give me a rewarding sense of fulfilment.</p>
+          <div id="about" class="content__segment content__segment--font22">
+            <p>I’m a motivated and dedicated front-end web developer who loves having a nice balance of problem solving, logical thinking and creativity in my work. After being introduced to the world of coding by close friends, I realised the potential it offered for me to be creative and build programs that would give me a rewarding sense of fulfilment.</p>
           </div>
-          <section id="projects" class="content__projects content--font18">
+          <section id="projects" class="content__segment">
             <h1>Projects</h1>
             <h2>Virtual Auslan  Interpreter</h2>
             <h3>JavaScript/Leap Motion</h3>
@@ -112,9 +112,9 @@
               </figure>
           </section>
 
-          <footer class="content__about" id="contact">
+          <footer class="content__segment content__segment--padding content--align-center" id="contact">
             <h1>Contact</h1>
-            <div id="contact-container" class="container">
+            <div class="container">
               <figure class="flex-1">
                 <a href="https://github.com/aparkinbotswana" target="_blank"><img class="svg-image" src="build/images/002-github.svg" alt="github link"></a>
               </figure>
