--- a/index.html
+++ b/index.html
@@ -11,48 +11,48 @@
 </head>
 <body>
     <header id="header">
-      <div id="heading-name" class="sticky">
+      <div id="heading-name" class="header">
         <div class="container">
-          <div class="flex-3">
-            <div class="container center">
-              <div class="flex-8"></div>    
-              <div class="flex-1 name">        
-                <p class="letter first-letter">J</p>
+          <div class="container__flex3">
+            <div class="container">
+              <div class="container__flex8"></div>    
+              <div class="container__flex1">        
+                <p class="header__letter header--first-letter">J</p>
               </div>
-              <div class="flex-1">        
-                <p class="letter">A</p>
+              <div class="container__flex1">        
+                <p class="header__letter">A</p>
               </div>
-              <div class="flex-1">        
-                <p class="letter">M</p>
+              <div class="container__flex1">        
+                <p class="header__letter">M</p>
               </div>
-              <div class="flex-1">        
-                <p class="letter">E</p>
+              <div class="container__flex1">        
+                <p class="header__letter">E</p>
               </div>
-              <div class="flex-1">        
-                <p class="letter">S</p>
+              <div class="container__flex1">        
+                <p class="header__letter">S</p>
               </div>
-              <div class="flex-1"></div>
+              <div class="container__flex1"></div>
             </div>
           </div>
         </div>
         <div class="container">
-          <div class="flex-3">
-            <div class="container center">
-              <div class="flex-8"></div>
-              <div class="flex-1"></div>        
-              <div class="flex-1 name">        
-                <p class="letter first-letter">T</p>
+          <div class="container__flex3">
+            <div class="container">
+              <div class="container__flex8"></div>
+              <div class="container__flex1"></div>        
+              <div class="container__flex1">        
+                <p class="header__letter header--first-letter">T</p>
               </div>
-              <div class="flex-1">        
-                <p class="letter">H</p>
+              <div class="container__flex1">        
+                <p class="header__letter">H</p>
               </div>
-              <div class="flex-1">        
-                <p class="letter">E</p>
+              <div class="container__flex1">        
+                <p class="header__letter">E</p>
               </div>
-              <div class="flex-1">        
-                <p class="letter">O</p>
+              <div class="container__flex1">        
+                <p class="header__letter">O</p>
               </div>
-              <div class="flex-1"></div>
+              <div class="container__flex1"></div>
             </div>
           </div>
         </div>
@@ -68,7 +68,7 @@
           <div id="nav-column-mobile" class="list navbar">
             <div id="mobile-1" class="mobile">
               <div class="navbar__container">
-                <a id="nav-contact" href="#about" class="navbar__anchor"><p class="navbar__button">About</p></a>
+                <a href="#about" class="navbar__anchor"><p class="navbar__button">About</p></a>
               </div>
             </div>
             <div id="mobile-2" class="mobile">
@@ -92,8 +92,8 @@
             <h2>Virtual Auslan  Interpreter</h2>
             <h3>JavaScript/Leap Motion</h3>
             <p>The Auslan Interpreter is designed to help those who are unable to understand Australian Sign Language, communicate with those who can. Currently, it recognises half the English alphabet. The browser app uses the Leap Motion to interpret hand gestures from the user. Based on these gestures, the program recognises which letter is being signed and displays, as well as speaks the recognised letter.</p>
-            <div class="code-buttons center">
-              <a class="content__button content__button--ghost" href="https://github.com/aparkinbotswana/Auslan-Interpreter" target="_blank" alt="Auslan Interpreter github link">Code</a>
+            <div class="button">
+              <a class="button__link button__link--ghost" href="https://github.com/aparkinbotswana/Auslan-Interpreter" target="_blank" alt="Auslan Interpreter github link">Code</a>
             </div>
             <figure class="photo">
               <img class="photo__img"  src="build/images/AuslanInterpreter.png" alt="Auslan Interpreter project image">
@@ -103,9 +103,9 @@
             <h2 class="projects-description">Fråga</h2>
             <h3>JavaScript/Ruby on Rails</h3>
             <p class="content--font18">Social app with a focus on geolocation. Users can post any question they like relevant to a particular location. Other users within the vicinity can see and respond to the question.</p>
-            <div class="code-buttons center">
-              <a class="content__button" href="https://fraga-app.herokuapp.com/" target="_blank" alt="fraga demo link">Demo</a>
-              <a class="content__button content__button--ghost" href="https://github.com/aparkinbotswana/Fraga" target="_blank" alt="fraga github link">Code</a>
+            <div class="button">
+              <a class="button__link" href="https://fraga-app.herokuapp.com/" target="_blank" alt="fraga demo link">Demo</a>
+              <a class="button__link button__link--ghost" href="https://github.com/aparkinbotswana/Fraga" target="_blank" alt="fraga github link">Code</a>
             </div>
               <figure class="photo">
                 <img class="photo__img"  src="build/images/Fraga.png" alt="Fraga project image">
@@ -115,13 +115,13 @@
           <footer class="content__segment content__segment--padding content--align-center" id="contact">
             <h1>Contact</h1>
             <div class="container">
-              <figure class="flex-1">
+              <figure class="container__flex1">
                 <a href="https://github.com/aparkinbotswana" target="_blank"><img class="svg-image" src="build/images/002-github.svg" alt="github link"></a>
               </figure>
-              <figure class="flex-1">
+              <figure class="container__flex1">
                 <a href="https://www.linkedin.com/in/james-theo/" target="_blank"><img class="svg-image" src="build/images/001-linkedin.svg" alt="linkedin link"></a>
               </figure>
-              <figure class="flex-1">
+              <figure class="container__flex1">
                 <a href="mailto:theojames1989@gmail.com"><img class="svg-image" src="build/images/003-mail.svg" alt="email address"></a>
               </figure>
             </div>
