made small change to media query for header responsiveness

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="container">
           <div class="container__flex3">
             <div class="container">
-              <div class="container__flex8"></div>    
+              <div class="container__flex8 container__flex3--mobile"></div>    
               <div class="container__flex1">        
                 <p class="header__letter header--first-letter">J</p>
               </div>
@@ -38,7 +38,7 @@
         <div class="container">
           <div class="container__flex3">
             <div class="container">
-              <div class="container__flex8"></div>
+              <div class="container__flex8 container__flex3--mobile"></div>
               <div class="container__flex1"></div>        
               <div class="container__flex1">        
                 <p class="header__letter header--first-letter">T</p>
