--- a/index.html
+++ b/index.html
@@ -84,11 +84,11 @@
           </div>
         </nav>
         <div id="content-column" class="content">
-<div id="about" class="content__segment content__segment--font22 content-text">
+<div id="about" class="content__segment content__segment--font22 content__margin">
             <p>I’m a motivated and dedicated front-end web developer who loves having a nice balance of problem solving, logical thinking and creativity in my work. After being introduced to the world of coding by close friends, I realised the potential it offered for me to be creative and build programs that would give me a rewarding sense of fulfilment.</p>
           </div>
           <section id="projects" class="content__segment">
-            <div class="content-text">
+            <div class="content__margin">
               <h1>Projects</h1>
               <h2>Virtual Auslan  Interpreter</h2>
               <h3>JavaScript/Leap Motion</h3>
@@ -98,10 +98,10 @@
               <a class="button__link button__link--ghost" href="https://github.com/aparkinbotswana/Auslan-Interpreter" target="_blank" alt="Auslan Interpreter github link">Code</a>
             </div>
             <figure class="photo">
-              <img id="pic" class="photo__img"  src="build/images/AuslanInterpreter.png" alt="Auslan Interpreter project image">
+              <img id="picture" class="photo__img"  src="build/images/AuslanInterpreter.png" alt="Auslan Interpreter project image">
             </figure>
 
-            <div class="content-text">
+            <div class="content__margin">
               <h2 class="projects-description">Fråga</h2>
               <h3>JavaScript/Ruby on Rails</h3>
               <p class="content--font18">Social app with a focus on geolocation. Users can post any question they like relevant to a particular location. Other users within the vicinity can see and respond to the question.</p>
