--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <script src="build/js/jquery-3.3.1.min.js"></script>
   <link rel="stylesheet" href="build/stylesheets/style.css">
-  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">  <script src="build/js/bundle.js" charset="utf-8"></script>
+  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">  
+  <script src="build/js/bundle.js" charset="utf-8"></script>
   <title>James Theo: Web Developer</title>
 </head>
 <body>
@@ -85,7 +86,7 @@
         </nav>
         <div id="content-column" class="content">
 <div id="about" class="content__segment content__segment--font22 content__margin">
-            <p>I’m a motivated and dedicated front-end web developer who loves having a nice balance of problem solving, logical thinking and creativity in my work. After being introduced to the world of coding by close friends, I realised the potential it offered for me to be creative and build programs that would give me a rewarding sense of fulfilment.</p>
+            <p id="about1">I’m a motivated and dedicated front-end web developer who loves having a nice balance of problem solving, logical thinking and creativity in my work. After being introduced to the world of coding by close friends, I realised the potential it offered for me to be creative and build programs that would give me a rewarding sense of fulfilment.</p>
           </div>
           <section id="projects" class="content__segment">
             <div class="content__margin">
@@ -98,7 +99,8 @@
               <a class="button__link button__link--ghost" href="https://github.com/aparkinbotswana/Auslan-Interpreter" target="_blank" alt="Auslan Interpreter github link">Code</a>
             </div>
             <figure class="photo">
-              <img id="picture" class="photo__img"  src="build/images/AuslanInterpreter.png" alt="Auslan Interpreter project image">
+              <iframe id="iframe" src="https://www.youtube.com/embed/Swy6URGIUbA" frameborder="0" allow="autoplay; encrypted-media"
+  allowfullscreen></iframe>
             </figure>
 
             <div class="content__margin">
@@ -111,7 +113,7 @@
               <a class="button__link button__link--ghost" href="https://github.com/aparkinbotswana/Fraga" target="_blank" alt="fraga github link">Code</a>
             </div>
               <figure class="photo">
-                <img class="photo__img"  src="build/images/Fraga.png" alt="Fraga project image">
+                <img id="picture" class="photo__img" src="build/images/Fraga.png" alt="Fraga project image">
               </figure>
           </section>
 
