--- a/index.html
+++ b/index.html
@@ -4,15 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <script src="build/js/jquery-3.3.1.min.js"></script>
   <link rel="stylesheet" href="build/stylesheets/style.css">
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">  
   <script src="build/js/bundle.js" charset="utf-8"></script>
   <title>James Theo: Web Developer</title>
 </head>
 <body>
-    <header id="header">
-      <div id="heading-name" class="header">
+    <header>
+      <!-- <div id="heading-name" class="header">
         <div class="container">
           <div class="container__flex3">
             <div class="container">
@@ -59,37 +58,35 @@
         </div>
         <div id="mobile-nav">
         </div>    
-      </div>
+      </div> -->
+<nav>
+  <!-- <div class="navbar__container">
+    <a href="#about" class="navbar__anchor"><p class="navbar__button">ART!!!</p></a>
+  </div>
+  <div class="navbar__container">
+    <a href="#projects" class="navbar__anchor"><p class="navbar__button">Projects</p></a>
+  </div>
+  <div class="navbar__container">
+    <a href="#contact" class="navbar__anchor"><p class="navbar__button">Contact</p></a>
+  </div> -->
+</nav>
+
     </header >
     
 
-    <div id="content">
-      <div id="parent-column">
-        <nav id="nav-column">
-          <div id="nav-column-mobile" class="list navbar">
-            <div id="mobile-1" class="mobile">
-              <div class="navbar__container">
-                <a href="#about" class="navbar__anchor"><p class="navbar__button">About</p></a>
-              </div>
-            </div>
-            <div id="mobile-2" class="mobile">
-              <div class="navbar__container">
-                <a href="#projects" class="navbar__anchor"><p class="navbar__button">Projects</p></a>
-              </div>
-            </div>
-            <div id="mobile-3" class="mobile">
-              <div class="navbar__container">
-                <a href="#contact" class="navbar__anchor"><p class="navbar__button">Contact</p></a>
-              </div>
-            </div>
-          </div>
-        </nav>
-        <div id="content-column" class="content">
-          <div id="about" class="content__segment content__segment--font22 content__margin">
+    <section>
+        <div>
+          <div>
             <p>I’m a motivated and dedicated front-end web developer who loves having a nice balance of problem solving, logical thinking and creativity in my work. After being introduced to the world of coding by close friends, I realised the potential it offered for me to be creative and build programs that would give me a rewarding sense of fulfilment.</p>
           </div>
-          <section id="projects" class="content__segment">
-            <div class="content__margin">
+          <section>
+            <h2 id="auslanInterpreter" class="projects" data-target="auslanInterpreterContent">Auslan Interpreter</h2>
+            <h2 id="usernameChecker" class="projects" data-target="usernameCheckerContent">Username Checker</h2>
+            <h2 id="fraga" class="projects" data-target="fragaContent">Fraga</h2>
+            <div id="auslanInterpreterContent" class="text noscale">Auslan</div>
+            <div id="usernameCheckerContent" class="text noscale">Username</div>
+            <div id="fragaContent" class="text noscale">Fraga</div>
+            <!-- <div class="content__margin">
               <h1>Projects</h1>
               <h2>Virtual Auslan  Interpreter</h2>
               <h3>JavaScript/Leap Motion</h3>
@@ -114,11 +111,11 @@
             </div>
               <figure class="photo">
                 <img id="picture" class="photo__img" src="build/images/Fraga.png" alt="Fraga project image">
-              </figure>
+              </figure> -->
           </section>
 
           <footer class="content__segment content__segment--padding content--align-center" id="contact">
-            <h1>Contact</h1>
+            <!-- <h1>Contact</h1>
             <div class="container">
               <figure class="container__flex1">
                 <a href="https://github.com/aparkinbotswana" target="_blank"><img class="svg-image" src="build/images/002-github.svg" alt="github link"></a>
@@ -129,10 +126,9 @@
               <figure class="container__flex1">
                 <a href="mailto:theojames1989@gmail.com"><img class="svg-image" src="build/images/003-mail.svg" alt="email address"></a>
               </figure>
-            </div>
+            </div> -->
           </footer>
         </div>
-      </div>
-    </div>
+    </section>
 </body>
 </html>
