--- a/index.html
+++ b/index.html
@@ -11,56 +11,8 @@
 </head>
 <body>
     <header>
-      <!-- <div id="heading-name" class="header">
-        <div class="container">
-          <div class="container__flex3">
-            <div class="container">
-              <div class="container__flex8 container__flex3--mobile"></div>    
-              <div class="container__flex1">        
-                <p class="header__letter header--first-letter">J</p>
-              </div>
-              <div class="container__flex1">        
-                <p class="header__letter">A</p>
-              </div>
-              <div class="container__flex1">        
-                <p class="header__letter">M</p>
-              </div>
-              <div class="container__flex1">        
-                <p class="header__letter">E</p>
-              </div>
-              <div class="container__flex1">        
-                <p class="header__letter">S</p>
-              </div>
-              <div class="container__flex1"></div>
-            </div>
-          </div>
-        </div>
-        <div class="container">
-          <div class="container__flex3">
-            <div class="container">
-              <div class="container__flex8 container__flex3--mobile"></div>
-              <div class="container__flex1"></div>        
-              <div class="container__flex1">        
-                <p class="header__letter header--first-letter">T</p>
-              </div>
-              <div class="container__flex1">        
-                <p class="header__letter">H</p>
-              </div>
-              <div class="container__flex1">        
-                <p class="header__letter">E</p>
-              </div>
-              <div class="container__flex1">        
-                <p class="header__letter">O</p>
-              </div>
-              <div class="container__flex1"></div>
-            </div>
-          </div>
-        </div>
-        <div id="mobile-nav">
-        </div>    
-      </div> -->
-<nav>
-  <!-- <div class="navbar__container">
+
+<!-- <nav>
     <a href="#about" class="navbar__anchor"><p class="navbar__button">ART!!!</p></a>
   </div>
   <div class="navbar__container">
@@ -68,52 +20,55 @@
   </div>
   <div class="navbar__container">
     <a href="#contact" class="navbar__anchor"><p class="navbar__button">Contact</p></a>
-  </div> -->
-</nav>
+  </div>
+</nav> -->
 
     </header >
     
 
     <section>
+      <div class="background">
+      </div>
+      <div id="slant-position" class="background background--alternate">
         <div>
-          <div>
-            <p>I’m a motivated and dedicated front-end web developer who loves having a nice balance of problem solving, logical thinking and creativity in my work. After being introduced to the world of coding by close friends, I realised the potential it offered for me to be creative and build programs that would give me a rewarding sense of fulfilment.</p>
-          </div>
-          <section>
-            <h2 id="auslanInterpreter" class="projects" data-target="auslanInterpreterContent">Auslan Interpreter</h2>
-            <h2 id="usernameChecker" class="projects" data-target="usernameCheckerContent">Username Checker</h2>
-            <h2 id="fraga" class="projects" data-target="fragaContent">Fraga</h2>
-            <div id="auslanInterpreterContent" class="text noscale">Auslan</div>
-            <div id="usernameCheckerContent" class="text noscale">Username</div>
-            <div id="fragaContent" class="text noscale">Fraga</div>
-            <!-- <div class="content__margin">
-              <h1>Projects</h1>
-              <h2>Virtual Auslan  Interpreter</h2>
-              <h3>JavaScript/Leap Motion</h3>
-              <p>The Auslan Interpreter is designed to help those who are unable to understand Australian Sign Language, communicate with those who can. Currently, it recognises half the English alphabet. The browser app uses the Leap Motion to interpret hand gestures from the user. Based on these gestures, the program recognises which letter is being signed and displays, as well as speaks the recognised letter.</p>
-            </div>
-            <div class="button">
-              <a class="button__link button__link--ghost" href="https://github.com/aparkinbotswana/Auslan-Interpreter" target="_blank" alt="Auslan Interpreter github link">Code</a>
-            </div>
-            <figure class="photo">
-              <iframe id="iframe" src="https://www.youtube.com/embed/Swy6URGIUbA" frameborder="0" allow="autoplay; encrypted-media"
-  allowfullscreen></iframe>
-            </figure>
+          <div id="slant-div" class="background__transform"></div>
+        </div>
+        <section class="content">
+          <h2 id="auslanInterpreter" class="projects" data-target="auslanInterpreterContent">Auslan Interpreter</h2>
+          <h2 id="usernameChecker" class="projects" data-target="usernameCheckerContent">Username Checker</h2>
+          <h2 id="fraga" class="projects" data-target="fragaContent">Fraga</h2>
+          <div id="auslanInterpreterContent" class="text noscale">Auslan</div>
+          <div id="usernameCheckerContent" class="text noscale">Username</div>
+          <div id="fragaContent" class="text noscale">Fraga</div>
+          <!-- <div class="content__margin">
+                      <h1>Projects</h1>
+                      <h2>Virtual Auslan  Interpreter</h2>
+                      <h3>JavaScript/Leap Motion</h3>
+                      <p>The Auslan Interpreter is designed to help those who are unable to understand Australian Sign Language, communicate with those who can. Currently, it recognises half the English alphabet. The browser app uses the Leap Motion to interpret hand gestures from the user. Based on these gestures, the program recognises which letter is being signed and displays, as well as speaks the recognised letter.</p>
+                    </div>
+                    <div class="button">
+                      <a class="button__link button__link--ghost" href="https://github.com/aparkinbotswana/Auslan-Interpreter" target="_blank" alt="Auslan Interpreter github link">Code</a>
+                    </div>
+                    <figure class="photo">
+                      <iframe id="iframe" src="https://www.youtube.com/embed/Swy6URGIUbA" frameborder="0" allow="autoplay; encrypted-media"
+          allowfullscreen></iframe>
+                    </figure>
 
-            <div class="content__margin">
-              <h2 class="projects-description">Fråga</h2>
-              <h3>JavaScript/Ruby on Rails</h3>
-              <p class="content--font18">Social app with a focus on geolocation. Users can post any question they like relevant to a particular location. Other users within the vicinity can see and respond to the question.</p>
-            </div>
-            <div class="button">
-              <a class="button__link" href="https://fraga-app.herokuapp.com/" target="_blank" alt="fraga demo link">Demo</a>
-              <a class="button__link button__link--ghost" href="https://github.com/aparkinbotswana/Fraga" target="_blank" alt="fraga github link">Code</a>
-            </div>
-              <figure class="photo">
-                <img id="picture" class="photo__img" src="build/images/Fraga.png" alt="Fraga project image">
-              </figure> -->
-          </section>
-
+                    <div class="content__margin">
+                      <h2 class="projects-description">Fråga</h2>
+                      <h3>JavaScript/Ruby on Rails</h3>
+                      <p class="content--font18">Social app with a focus on geolocation. Users can post any question they like relevant to a particular location. Other users within the vicinity can see and respond to the question.</p>
+                    </div>
+                    <div class="button">
+                      <a class="button__link" href="https://fraga-app.herokuapp.com/" target="_blank" alt="fraga demo link">Demo</a>
+                      <a class="button__link button__link--ghost" href="https://github.com/aparkinbotswana/Fraga" target="_blank" alt="fraga github link">Code</a>
+                    </div>
+                      <figure class="photo">
+                        <img id="picture" class="photo__img" src="build/images/Fraga.png" alt="Fraga project image">
+                      </figure> -->
+        </section>
+      </div>
+    </section>
           <footer class="content__segment content__segment--padding content--align-center" id="contact">
             <!-- <h1>Contact</h1>
             <div class="container">
@@ -129,6 +84,5 @@
             </div> -->
           </footer>
         </div>
-    </section>
 </body>
 </html>
