fixed resize issue. slant now stays in place

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     
 
     <section>
-      <div class="background">
+      <div id="background" class="background">
       </div>
       <div id="slant-position" class="background background--alternate">
         <div>
