figured out how to do all that responsiveness with one line of css. like a brainwave moment. fixes a few other issues too. Happy Days!!!

--- a/index.html
+++ b/index.html
@@ -11,18 +11,16 @@
 </head>
 <body>
     <header>
-
-<!-- <nav>
-    <a href="#about" class="navbar__anchor"><p class="navbar__button">ART!!!</p></a>
-  </div>
-  <div class="navbar__container">
-    <a href="#projects" class="navbar__anchor"><p class="navbar__button">Projects</p></a>
-  </div>
-  <div class="navbar__container">
-    <a href="#contact" class="navbar__anchor"><p class="navbar__button">Contact</p></a>
-  </div>
-</nav> -->
-
+      <nav>
+          <a href="#art" class="navbar__anchor"><p class="navbar__button">ART!!!</p></a>
+        </div>
+        <div class="navbar__container">
+          <a href="#projects" class="navbar__anchor"><p class="navbar__button">Projects</p></a>
+        </div>
+        <div class="navbar__container">
+          <a href="#contact" class="navbar__anchor"><p class="navbar__button">Contact</p></a>
+        </div>
+      </nav>
     </header >
     
 
