took out some redundant html. changed slanty thing to an SVG instead. Should have done that from the start

--- a/index.html
+++ b/index.html
@@ -5,82 +5,86 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="build/stylesheets/style.css">
-  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">  
+  <link href="https://fonts.googleapis.com/css?family=Dosis|Julius+Sans+One|Nanum+Gothic|Rubik|Raleway" rel="stylesheet">
   <script src="build/js/bundle.js" charset="utf-8"></script>
   <title>James Theo: Web Developer</title>
 </head>
 <body>
-    <header>
-      <nav>
-          <a href="#art" class="navbar__anchor"><p class="navbar__button">ART!!!</p></a>
-        </div>
-        <div class="navbar__container">
-          <a href="#projects" class="navbar__anchor"><p class="navbar__button">Projects</p></a>
-        </div>
-        <div class="navbar__container">
-          <a href="#contact" class="navbar__anchor"><p class="navbar__button">Contact</p></a>
-        </div>
-      </nav>
-    </header >
+  <header>
+    <h1>JAMES THEO</h1>
+    <p>Frontend Developer</p>
+    <nav>
+        <a href="#art" class="navbar__anchor"><p class="navbar__button">ART!!!</p></a>
+      </div>
+      <div class="navbar__container">
+        <a href="#projects" class="navbar__anchor"><p class="navbar__button">Projects</p></a>
+      </div>
+      <div class="navbar__container">
+        <a href="#contact" class="navbar__anchor"><p class="navbar__button">Contact</p></a>
+      </div>
+    </nav>
+  </header >
     
+  <section class="background">
+    <h2>ART! YAY!!!</h2>
+  </section>
+ 
 
-    <section>
-      <div id="background" class="background">
-      </div>
-      <div id="slant-position" class="background background--alternate">
-        <div>
-          <div id="slant-div" class="background__transform"></div>
-        </div>
-        <section class="content">
-          <h2 id="auslanInterpreter" class="projects" data-target="auslanInterpreterContent">Auslan Interpreter</h2>
-          <h2 id="usernameChecker" class="projects" data-target="usernameCheckerContent">Username Checker</h2>
-          <h2 id="fraga" class="projects" data-target="fragaContent">Fraga</h2>
-          <div id="auslanInterpreterContent" class="text noscale">Auslan</div>
-          <div id="usernameCheckerContent" class="text noscale">Username</div>
-          <div id="fragaContent" class="text noscale">Fraga</div>
-          <!-- <div class="content__margin">
-                      <h1>Projects</h1>
-                      <h2>Virtual Auslan  Interpreter</h2>
-                      <h3>JavaScript/Leap Motion</h3>
-                      <p>The Auslan Interpreter is designed to help those who are unable to understand Australian Sign Language, communicate with those who can. Currently, it recognises half the English alphabet. The browser app uses the Leap Motion to interpret hand gestures from the user. Based on these gestures, the program recognises which letter is being signed and displays, as well as speaks the recognised letter.</p>
-                    </div>
-                    <div class="button">
-                      <a class="button__link button__link--ghost" href="https://github.com/aparkinbotswana/Auslan-Interpreter" target="_blank" alt="Auslan Interpreter github link">Code</a>
-                    </div>
-                    <figure class="photo">
-                      <iframe id="iframe" src="https://www.youtube.com/embed/Swy6URGIUbA" frameborder="0" allow="autoplay; encrypted-media"
-          allowfullscreen></iframe>
-                    </figure>
+  <section class=" background background--alternate">
+    <svg class="angled-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none">
+      <polygon points="0,0 100,0 0,100" />
+    </svg>
+    <h2>PROJECTS</h2>
+    <h3 id="auslanInterpreter" class="projects" data-target="auslanInterpreterContent">Auslan Interpreter</h3>
+    <h3 id="usernameChecker" class="projects" data-target="usernameCheckerContent">Username Checker</h3>
+    <h3 id="fraga" class="projects" data-target="fragaContent">Fraga</h3>
+    <div id="auslanInterpreterContent" class="text noscale">Auslan</div>
+    <div id="usernameCheckerContent" class="text noscale">Username</div>
+    <div id="fragaContent" class="text noscale">Fraga</div>
+    <!-- <div class="content__margin">
+                <h1>Projects</h1>
+                <h2>Virtual Auslan  Interpreter</h2>
+                <h3>JavaScript/Leap Motion</h3>
+                <p>The Auslan Interpreter is designed to help those who are unable to understand Australian Sign Language, communicate with those who can. Currently, it recognises half the English alphabet. The browser app uses the Leap Motion to interpret hand gestures from the user. Based on these gestures, the program recognises which letter is being signed and displays, as well as speaks the recognised letter.</p>
+              </div>
+              <div class="button">
+                <a class="button__link button__link--ghost" href="https://github.com/aparkinbotswana/Auslan-Interpreter" target="_blank" alt="Auslan Interpreter github link">Code</a>
+              </div>
+              <figure class="photo">
+                <iframe id="iframe" src="https://www.youtube.com/embed/Swy6URGIUbA" frameborder="0" allow="autoplay; encrypted-media"
+    allowfullscreen></iframe>
+              </figure>
 
-                    <div class="content__margin">
-                      <h2 class="projects-description">Fråga</h2>
-                      <h3>JavaScript/Ruby on Rails</h3>
-                      <p class="content--font18">Social app with a focus on geolocation. Users can post any question they like relevant to a particular location. Other users within the vicinity can see and respond to the question.</p>
-                    </div>
-                    <div class="button">
-                      <a class="button__link" href="https://fraga-app.herokuapp.com/" target="_blank" alt="fraga demo link">Demo</a>
-                      <a class="button__link button__link--ghost" href="https://github.com/aparkinbotswana/Fraga" target="_blank" alt="fraga github link">Code</a>
-                    </div>
-                      <figure class="photo">
-                        <img id="picture" class="photo__img" src="build/images/Fraga.png" alt="Fraga project image">
-                      </figure> -->
-        </section>
-      </div>
-    </section>
-          <footer class="content__segment content__segment--padding content--align-center" id="contact">
-            <!-- <h1>Contact</h1>
-            <div class="container">
-              <figure class="container__flex1">
-                <a href="https://github.com/aparkinbotswana" target="_blank"><img class="svg-image" src="build/images/002-github.svg" alt="github link"></a>
-              </figure>
-              <figure class="container__flex1">
-                <a href="https://www.linkedin.com/in/james-theo/" target="_blank"><img class="svg-image" src="build/images/001-linkedin.svg" alt="linkedin link"></a>
-              </figure>
-              <figure class="container__flex1">
-                <a href="mailto:theojames1989@gmail.com"><img class="svg-image" src="build/images/003-mail.svg" alt="email address"></a>
-              </figure>
-            </div> -->
-          </footer>
-        </div>
+              <div class="content__margin">
+                <h2 class="projects-description">Fråga</h2>
+                <h3>JavaScript/Ruby on Rails</h3>
+                <p class="content--font18">Social app with a focus on geolocation. Users can post any question they like relevant to a particular location. Other users within the vicinity can see and respond to the question.</p>
+              </div>
+              <div class="button">
+                <a class="button__link" href="https://fraga-app.herokuapp.com/" target="_blank" alt="fraga demo link">Demo</a>
+                <a class="button__link button__link--ghost" href="https://github.com/aparkinbotswana/Fraga" target="_blank" alt="fraga github link">Code</a>
+              </div>
+                <figure class="photo">
+                  <img id="picture" class="photo__img" src="build/images/Fraga.png" alt="Fraga project image">
+                </figure> -->
+  </section>
+
+  <footer class="background" id="contact">
+<svg class="angled-svg angled-svg--charcoal" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none">
+      <polygon points="0,0 100,0 0,100" />
+    </svg>
+    <h2>CONTACT</h2>
+    <div class="container">
+      <figure class="container__flex1">
+        <a href="https://github.com/aparkinbotswana" target="_blank"><img class="svg-image" src="build/images/002-github.svg" alt="github link"></a>
+      </figure>
+      <figure class="container__flex1">
+        <a href="https://www.linkedin.com/in/james-theo/" target="_blank"><img class="svg-image" src="build/images/001-linkedin.svg" alt="linkedin link"></a>
+      </figure>
+      <figure class="container__flex1">
+        <a href="mailto:theojames1989@gmail.com"><img class="svg-image" src="build/images/003-mail.svg" alt="email address"></a>
+      </figure>
+    </div>
+  </footer>
 </body>
 </html>
