--- a/index.html
+++ b/index.html
@@ -26,7 +26,13 @@
   </header >
     
   <section class="background">
-    <h2>ART! YAY!!!</h2>
+    <div id="canvas-container">
+      <!-- canvas element created and appended here through p5.js library -->
+    </div>
+    <div>
+      <a id="jpeg">Download as jpeg</a>
+      <a id="png">Download as png</a>
+    </div>
   </section>
  
 
