fixed canvas position

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
     <div id="canvas-container">
       <!-- canvas element created and appended here through p5.js library -->
     </div>
-    <div>
+    <!-- <div>
       <a id="jpeg">Download as jpeg</a>
       <a id="png">Download as png</a>
-    </div>
+    </div> -->
   </section>
  
 
