--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
         <a class="button__link button__link--ghost" href="https://github.com/aparkinbotswana/Auslan-Interpreter" target="_blank"
           alt="Auslan Interpreter github link">Code</a>
       </div>
-      <figure class="photo-container">
+      <!-- <figure class="photo-container">
         <iframe id="iframe" src="https://www.youtube.com/embed/Swy6URGIUbA" frameborder="0" allow="autoplay; encrypted-media"
           allowfullscreen></iframe>
-      </figure>
+      </figure> -->
     </div>
 
 
