fixed up the issue with the decrementing line not working properly. rearranged some of the code

--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
   </header >
     
   <section class="content content__p5">
+    <!-- <div class="name-container">
+      <p class="name-container__text">James Theo</p>
+      <p class="name-container__text">Frontend Devloper (Developer)</p>
+    </div> -->
     <div id="canvas-container">
       <!-- canvas element created and appended here through p5.js library -->
     </div>
