positioned name using js. slight alteration to particle class so that it works nicer on mobile

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <title>James Theo: Web Developer</title>
 </head>
 <body>
-  <header>
+  <!-- <header>
     <h1>JAMES THEO</h1>
     <p>Frontend Developer</p>
     <nav>
@@ -23,20 +23,16 @@
         <a href="#contact" class="navbar__anchor"><p class="navbar__button">Contact</p></a>
       </div>
     </nav>
-  </header >
-    
-  <section class="content content__p5">
-    <!-- <div class="name-container">
-      <p class="name-container__text">James Theo</p>
-      <p class="name-container__text">Frontend Devloper (Developer)</p>
-    </div> -->
+  </header > -->
+
+  <div id="name" class="name-container">
+    <p class="name-container__text">James Theo</p>
+    <p class="name-container__text">Frontend Devloper (Developer)</p>
+  </div>
+  <section id="p5" class="content content__p5">
     <div id="canvas-container">
       <!-- canvas element created and appended here through p5.js library -->
     </div>
-    <!-- <div>
-      <a id="jpeg">Download as jpeg</a>
-      <a id="png">Download as png</a>
-    </div> -->
   </section>
  
 
