--- a/index.html
+++ b/index.html
@@ -10,6 +10,18 @@
   <title>James Theo: Web Developer</title>
 </head>
 <body>
+  <div class="menu-container">
+    <a href="#" class="menu-button [ js-menu-button ]">
+      <svg class="menu-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100">
+        <g fill="none" fill-rule="evenodd" stroke="#979797">
+          <path d="M13,26.5 L88,26.5" />
+          <path d="M13,50.5 L88,50.5" />
+          <path d="M13,50.5 L88,50.5" />
+          <path d="M13,74.5 L88,74.5" />
+        </g>
+      </svg>
+    </a>
+  </div>
   <!-- <header>
     <h1>JAMES THEO</h1>
     <p>Frontend Developer</p>
